--- a/pages/publication.html
+++ b/pages/publication.html
@@ -63,7 +63,7 @@
                             <li class="item"><a class="txt_p" href="../index.html">About us</a></li>
                             <li class="item"><a class="txt_p" href="">Services</a></li>
                             <li class="item"><a class="txt_p" href="">Team</a></li>
-                            <li class="item"><a class="txt_p" href="./pages/_publication.html">Publications</a></li>
+                            <li class="item"><a class="txt_p" href="./pages/publication.html">Publications</a></li>
                             <li class="item"><a class="txt_p" href="">Contact</a></li>
                         </ul>
                       </nav>
