--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <a class="txt_u" href="">Team</a>
                           </li>
                           <li class="item">
-                            <a class="txt_u" href="./pages/_publication.html"
+                            <a class="txt_u" href="./publication.html"
                               >Publications</a
                             >
                           </li>
