--- a/publication.html
+++ b/publication.html
@@ -6,7 +6,7 @@
     <title>Publication</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="../css/main.css">
+   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <div class="main__section ">
@@ -63,7 +63,7 @@
                             <li class="item"><a class="txt_p" href="../index.html">About us</a></li>
                             <li class="item"><a class="txt_p" href="">Services</a></li>
                             <li class="item"><a class="txt_p" href="">Team</a></li>
-                            <li class="item"><a class="txt_p" href="./pages/publication.html">Publications</a></li>
+                            <li class="item"><a class="txt_p" href="./index.html">Publications</a></li>
                             <li class="item"><a class="txt_p" href="">Contact</a></li>
                         </ul>
                       </nav>
