--- a/publication.html
+++ b/publication.html
@@ -35,7 +35,7 @@
                       </div>
                      
                       <button class="navbar-toggler h-toggler  " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
-                        <object data="../svg_public/Hamburger.svg" type=""></object>
+                        <object data="./svg_public/Hamburger.svg" type=""></object>
                       </button>
                 </div>
                   <div class="header_more__info d-none d-sm-flex gap-3 align-items-center justify-content-md-end justify-content-start ">
@@ -85,31 +85,31 @@
             </div>
             <div class="row pt-5 ">
                 <div class="col-12 col-sm-6 col-lg-4 pb-4">
-                 <object class="img" data="../jpg_photo/work.jpg" type=""></object>
+                 <object class="img" data="./jpg_photo/work.jpg" type=""></object>
                  <h3 class="h3_publication pt-4 h3_p"> <a class="publication_links" href=""> Equity associate</a></h3>
                  <p class="p_publication pb-3 pt-3 p_pub">April 22</p>
                  <h5 class="h5 h5_publication pt-3 h5_p ">I'm a jun on projects. I am a co-owner of a law firm. How it happened. Before entering my parents told me that if I…</h5>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4 pb-4">
-                 <object class="img" data="../jpg_photo/GDPR.jpg" type=""></object>
+                 <object class="img" data="./jpg_photo/GDPR.jpg" type=""></object>
                  <h3 class="h3_publication pt-4 h3_p"> <a class="publication_links" href=""> Penalty for the Good Corporation: what will happen to Google and others for violating the GDPR</a></h3>
                  <p class="p_publication pb-3 pt-3 p_pub">September 29</p>
                  <h5 class="h5 h5_publication pt-3 h5_p ">And why the recovery of 50 million euros could be a fateful precedent According to Mind.ua January 21 National Commission for Data Protection.</h5>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4 pb-5 ">
-                 <object class="img" data="../jpg_photo/people.jpg" type=""></object>
+                 <object class="img" data="./jpg_photo/people.jpg" type=""></object>
                  <h3 class="h3_publication pt-4 h3_p"> <a class="publication_links" href=""> Millennial Testament</a></h3>
                  <p class="p_publication pb-3 pt-3 p_pub">August 19</p>
                  <h5 class="h5 h5_publication pt-3 h5_p ">What and how modern vloggers, opinion leaders and crypto-millionaires will inherit A typical legacy of the Ukrainian generation X looks like this: an apartment in…</h5>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4 pb-5 ">
-                    <object class="img" data="../jpg_public/Law.jpg" type=""></object>
+                    <object class="img" data="./jpg_public/Law.jpg" type=""></object>
                     <h3 class="h3_publication pt-4 h3_p"> <a class="publication_links" href="">Language Law: How to Make Your Website Relevant</a></h3>
                     <p class="p_publication pb-3 pt-3 p_pub">August 19</p>
                     <h5 class="h5 h5_publication pt-3 h5_p ">Natalia Kyryk, head of content studio Wordfactory.ua First, it's beautiful! This is the number one argument in favor of the Ukrainian-language site. Secondly, it is effective. IN…</h5>
                    </div>
                    <div class="col-12 col-sm-6 col-lg-4 pb-5 ">
-                    <object class="img" data="../jpg_public/children.jpg" type=""></object>
+                    <object class="img" data="./jpg_public/children.jpg" type=""></object>
                     <h3 class="h3_publication pt-4 h3_p"><a class="publication_links" href="">Reimbursement of the child's tuition fees in kindergarten and school</a></h3>
                     <p class="p_publication pb-3 pt-3 p_pub">February 5, 2018</p>
                     <h5 class="h5 h5_publication pt-3 h5_p ">What we are talking about In June this year, the Verkhovna Rada amended the Tax Code of Ukraine. From now on, parents who receive an official…</h5>
