fix logo and more fix

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                       <a class="navbar-brand" href="#">
                         <object
                           class="img_logo_header"
-                          data="../svg_icons/Logo.svg "
+                          data="./svg_icons/Logo.svg "
                           type=""
                         ></object>
                         <a class="header_more__logo_2">
@@ -401,7 +401,7 @@
             <div class="col-12 col-sm-4 col-lg-3">
               <object
                 class="img_p"
-                data="/svg_icons/3d_look.svg"
+                data="./svg_icons/3d_look.svg"
                 type=""
               ></object>
             </div>
