--- a/publication.html
+++ b/publication.html
@@ -28,7 +28,7 @@
                 <div class="header_more__logo d-flex align-items-center justify-content-between">
                     <div class="navbar-other ">
                     <a class="navbar-brand" href="#">
-                        <object  class="img_logo_header_p"  data="../svg_public/Logo_header.svg " type=""></object>
+                        <object  class="img_logo_header_p"  data="./svg_public/Logo_header.svg " type=""></object>
                         <a class="header_more__logo_2">
                           </a>
                       </a>
@@ -60,10 +60,10 @@
                     <div class="offcanvas-body align-items-center justify-content-md-end justify-content-start">
                       <nav>
                         <ul class="d-flex gap-3 flex-sm-row flex-column">
-                            <li class="item"><a class="txt_p" href="../index.html">About us</a></li>
+                            <li class="item"><a class="txt_p" href="./index.html">About us</a></li>
                             <li class="item"><a class="txt_p" href="">Services</a></li>
                             <li class="item"><a class="txt_p" href="">Team</a></li>
-                            <li class="item"><a class="txt_p" href="./index.html">Publications</a></li>
+                            <li class="item"><a class="txt_p" href="">Publications</a></li>
                             <li class="item"><a class="txt_p" href="">Contact</a></li>
                         </ul>
                       </nav>
