--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                             >
                           </li>
                           <li class="item">
-                            <a class="txt_u" href="">Contact</a>
+                            <a class="txt_u" href="./contact_page.html">Contact</a>
                           </li>
                         </ul>
                       </nav>
