--- a/contact_page.html
+++ b/contact_page.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="page_contact">
-        <header class="main__header pt-3 pb-5">
+        <header class="main__header pt-3  header_contact">
             <div class="header_top">
               <div class="header_top__info">
                 <button class="btn-sm">Ук</button>
@@ -39,7 +39,7 @@
                       <a class="navbar-brand" href="#">
                         <object
                           class="img_logo_header_p"
-                          data="./svg_public/Logo_header.svg "
+                          data="./svg_contact/Logo.svg"
                           type=""
                         ></object>
                         <a class="header_more__logo_2"> </a>
@@ -119,7 +119,7 @@
           </header>
           <main class="main_contact pb-5">
             <div class="conteiner_entry">
-                <div class="contact_title d-flex justify-content-between">
+                <div class="contact_title ">
                     <div class="contact_info d-flex flex-column justify-content-start gap-4">
                         <h3 class="h3 h3_soc">Kyiv, </br> Mechnikova str, 14</h2>
                         <div class="contact_social pt-3 pb-3">
@@ -143,7 +143,7 @@
                 </div>
             </div>
           </main>
-          <footer class="footer">
+          <footer class="footer pb-0 mb-0" >
             <div class="conteiner">
               <div class="footer_content row pt-4">
                 <div class="footer_links col-12 col-sm-6 col-lg-6">
